<resources>
    <string name="app_name">XcelTec Project</string>
    <string name="it_news">IT News</string>
    <string name="latest_news">Latest News</string>
    <string name="description">DESCRIPTION</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="news_image">News Image</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_login">LogIn</string>
    <string name="action_login">LogIn</string>
    <string name="extra">We Heard you love reading <b>News</b>. \nSo here we are to achieve your love at more ease.</string>
</resources>