<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="article"
            type="com.smitcoderx.learn.xceltecproject.model.Article" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_news"
                imageURL="@{article.urlToImage}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/news_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <View
                android:id="@+id/view"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toBottomOf="@+id/iv_news"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@{article.title}"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                tools:text="@string/it_news" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@{article.description}"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/newsTitle"
                app:layout_constraintTop_toBottomOf="@+id/newsTitle"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tvPublishedAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{article.publishedAt}"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                tools:text="@string/published_at" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>